adding some images... and shell scripts

--- a/fees401K.html
+++ b/fees401K.html
@@ -11,7 +11,7 @@
 
 
 
-<title>ShineTrades</title>
+<title>Calculating Mutual Fund Fees</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
@@ -323,13 +323,37 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">ShineTrades</h1>
+<h1 class="title toc-ignore">Calculating Mutual Fund Fees</h1>
 
 </div>
 
 
-<div id="fees" class="section level1">
-<h1>Fees</h1>
+<div id="the-tool" class="section level1">
+<h1>The Tool</h1>
+<p>We use <a href="www.morningstar.com">Morningstar’s</a> <a href="http://portfolio.morningstar.com/RtPort/Free/InstantXRayDEntry.aspx">Instant X-Ray Tool</a> to calculate the cost of owning one or more mutual funds.</p>
+</div>
+<div id="enter-symbol" class="section level1">
+<h1>Enter Symbol</h1>
+<p><em>Instant X-Ray</em> was built to look at a portfolio of funds all at once. If we want to understand the fees of a single fund, we enter one at a time. For example:</p>
+<div class="figure">
+<img src="images/morningstar/xray/costoffunds1.png" alt="Step 1" />
+<p class="caption">Step 1</p>
+</div>
+<p>then, click on the xray button</p>
+<div class="figure">
+<img src="images/morningstar/xray/costoffunds2.png" alt="Step 2" />
+<p class="caption">Step 2</p>
+</div>
+<div id="single-mutual-fund" class="section level2">
+<h2>Single Mutual Fund</h2>
+<p>To calculate the fees of a single mutual, enter a single holding in the <a href="http://portfolio.morningstar.com/RtPort/Free/InstantXRayDEntry.aspx">Instant X-Ray Tool</a> as follows:</p>
+</div>
+</div>
+<div id="another-heading" class="section level1">
+<h1>another heading</h1>
+<div id="and-another" class="section level2">
+<h2>and another</h2>
+</div>
 </div>
 
 
