--- a/index.html
+++ b/index.html
@@ -328,8 +328,14 @@ div.tocify {
 </div>
 
 
-<div id="introduction" class="section level1">
-<h1>Introduction</h1>
+<div id="welcome" class="section level1">
+<h1>Welcome</h1>
+<p>This is the ShinyTrades companion web site. Though, not much here yet.</p>
+<p>The first thing I am going to document is how to use <a href="www.morningstar.com">Morningstar’s</a> <a href="http://portfolio.morningstar.com/RtPort/Free/InstantXRayDEntry.aspx">Instant X-Ray Tool</a> to understand the hidden features of mutual funds:</p>
+<ul>
+<li><a href="fees401K.html">Hidden Fees</a></li>
+<li><a href="balance401K.html">Balance</a></li>
+</ul>
 </div>
 
 
