--- a/balance401K.html
+++ b/balance401K.html
@@ -11,7 +11,7 @@
 
 
 
-<title>ShineTrades</title>
+<title>Balancing a 401K</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
@@ -275,8 +275,17 @@ div.tocify {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>
-  <a href="index.html">Home</a>
+        <li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Plan
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="goals.html">Goals</a>
+    </li>
+  </ul>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
@@ -286,6 +295,9 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Mutual Funds</li>
+    <li>
+      <a href="vanguardfunds.html">Vanguard Funds</a>
+    </li>
     <li>
       <a href="xray.html">X-Ray</a>
     </li>
@@ -328,13 +340,64 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">ShineTrades</h1>
+<h1 class="title toc-ignore">Balancing a 401K</h1>
 
 </div>
 
 
-<div id="balance" class="section level1">
-<h1>Balance</h1>
+<div id="introduction" class="section level1">
+<h1>Introduction</h1>
+<p>Mutual funds are far from transparent about their holdings. And we cannot rely on the names of today’s funds to tell us what is in each fund. Fortunately, Morningstar provides tool to help us see what types of investments are instead a portfolio of mutual funds.</p>
+</div>
+<div id="directions" class="section level1">
+<h1>Directions</h1>
+<ul>
+<li><p>Research</p>
+<p>Before you can get started, you will need the list of fund symbols from your brokerage. For educational purposes, you can use <a href="vanguardfunds.html">list of funds</a> available to me.</p></li>
+<li><p>Open the tool</p>
+<p>Open <a href="http://portfolio.morningstar.com/RtPort/Free/InstantXRayDEntry.aspx">Instant X-Ray Tool</a> to calculate the cost of owning one or more mutual funds.</p></li>
+<li><p>Enter the Symbols</p>
+<p>Enter the symbols of the portfolio you want to examine.</p>
+<div class="figure">
+<img src="images/morningstar/xray/diversification1.png" alt="Enter Holdings" />
+<p class="caption">Enter Holdings</p>
+</div></li>
+<li><p>Enter Holding Values</p>
+<p>Enter holding values for each symbol, either as a dollar value or as percentage of your account.</p></li>
+<li><p>Click on the <em>Show Instant X-Ray</em> button</p>
+<div class="figure">
+<img src="images/morningstar/xray/diversification2.png" alt="Instant X-Ray" />
+<p class="caption">Instant X-Ray</p>
+</div></li>
+</ul>
+</div>
+<div id="understanding-the-x-ray" class="section level1">
+<h1>Understanding the X-Ray</h1>
+<div id="asset-allocation" class="section level2">
+<h2>Asset Allocation</h2>
+<p>In the upper left panel, you see the break out by cash, stocks and bonds. As a general rule, young people start with 80% stocks and 20% bonds. Those closer to retirement shift more into bonds.</p>
+</div>
+<div id="stock-sector" class="section level2">
+<h2>Stock Sector</h2>
+<p>But, asset allocation is not the entire story. The second panel on the left breaks out stock holdings by sector. I’m not sure what the best break out here should be, but I do know you would not want to have too much in anyone one category. For example, having 80% in energy is probably bad. We will look at other tools to better understand these sectors.</p>
+</div>
+<div id="stock-style" class="section level2">
+<h2>Stock Style</h2>
+<p>Again, I do not yet know what an ideal allocation between these boxes should be. In the example shown, I am making the following assumptions:</p>
+<ul>
+<li>Being fairly evenly spread out between value-core-growth and large-med-small is probably a good thing</li>
+<li>Having everyting considered high quality is probably a good thing</li>
+<li>Moderate interest rate sensitive must be good, since we strive for everything in moderation.</li>
+</ul>
+</div>
+<div id="stock-type" class="section level2">
+<h2>Stock Type</h2>
+<p>Yet again, I do not know what a perfect allocation would look like. But, looking similar to the S&amp;P is probably not a bad thing.</p>
+</div>
+<div id="world-regions" class="section level2">
+<h2>World Regions</h2>
+<p>Given the current turmoil in the world, I’m content with having everything in North America.</p>
+</div>
 </div>
 
 
