--- a/goals.html
+++ b/goals.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Calculating Mutual Fund Fees</title>
+<title>Goals</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
@@ -296,9 +296,6 @@ div.tocify {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Mutual Funds</li>
     <li>
-      <a href="vanguardfunds.html">Vanguard Funds</a>
-    </li>
-    <li>
       <a href="xray.html">X-Ray</a>
     </li>
   </ul>
@@ -340,39 +337,76 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Calculating Mutual Fund Fees</h1>
+<h1 class="title toc-ignore">Goals</h1>
 
 </div>
 
 
-<div id="introduction" class="section level1">
-<h1>Introduction</h1>
-<p>Mutual funds are far from transparent with their fees. Fortunately, Morningstar provides tool to help us calculate how much it costs to own specific mutual funds.</p>
-</div>
-<div id="directions" class="section level1">
-<h1>Directions</h1>
+<div id="continuing-education" class="section level1">
+<h1>Continuing Education</h1>
+<p>I am building this app as part of my continuing education in the following areas:</p>
 <ul>
-<li><p>Research</p>
-<p>Before you can get started, you will need the list of fund symbols from your brokerage. For educational purposes, you can use <a href="vanguardfunds.html">list of funds</a> available to me.</p></li>
-<li><p>Open the tool</p>
-<p>Open <a href="http://portfolio.morningstar.com/RtPort/Free/InstantXRayDEntry.aspx">Instant X-Ray Tool</a> to calculate the cost of owning one or more mutual funds.</p>
-<div class="figure">
-<img src="images/morningstar/xray/costoffunds1.png" alt="Enter Holdings" />
-<p class="caption">Enter Holdings</p>
-</div></li>
-<li><p>Enter a Symbol</p>
-<p><em>Instant X-Ray</em> was built to look at a portfolio of funds all at once. If we want to understand the fees of a single fund, we enter one at a time. For example:</p></li>
-<li><p>Enter a Dollar Value</p>
-<p>Since we want to know a dollar value, we must provide a dollar value for our holdings. If you do not own the mutual fund, I suggest entering either $100,000 or $10,000.</p></li>
-<li><p>Click on the <em>Show Instant X-Ray</em> button</p>
-<p>![Instant X-Ray(images/morningstar/xray/costoffunds2.png)</p>
-<p>The important numbers are highlighted in yellow.</p>
+<li>Data Science</li>
+<li>Programing R
 <ul>
-<li><p><a href="https://en.wikipedia.org/wiki/expense_ratio">Expense Ratio</a></p>
-<p>The lower this number, the better. Ideally, we want a ratio that is under 0.5%. But, under 0.3% is even better.</p></li>
-<li><p>Estimated Mutual Fund Expenses</p>
-<p>This is the dollar value of expenses based on the value you specified.</p></li>
+<li>Create reusuable packages</li>
+<li>Reproducable research</li>
+<li>Interactive web applications</li>
 </ul></li>
+<li>Programing TradeStation’s Easy Language
+<ul>
+<li>Integrating Easy Language with R</li>
+<li>Building indicators and show-mes.</li>
+<li>Building strategies</li>
+</ul></li>
+<li>System integration
+<ul>
+<li>Using drop box</li>
+</ul></li>
+<li>Collaboration with others through
+<ul>
+<li>GitHub</li>
+<li>StackExchange</li>
+<li>Writing</li>
+</ul></li>
+<li>Trading
+<ul>
+<li>Technical trading analysis</li>
+<li>Trading strategy implementation and back testing</li>
+<li>Trading plan implementation and measurement</li>
+</ul></li>
+</ul>
+</div>
+<div id="trading-plan" class="section level1">
+<h1>Trading Plan</h1>
+<p>After I get further along with this project, I hope to be able to use this app as part of my trading plan.</p>
+</div>
+<div id="retirement-plan" class="section level1">
+<h1>Retirement Plan</h1>
+<p>While retirement is still a ways off, it is likely that I will still need to generate some form of income.<br />
+I believe this effort will prepare me for eventual retirement. At this point, I am considering the following options for my retirement plan:</p>
+<ul>
+<li>Gig consulting (for profit and as volunteer)
+<ul>
+<li>SQL</li>
+<li>R</li>
+<li>Easy Language</li>
+<li>Custom indicators</li>
+<li>Customer trading strategies</li>
+<li>Trading strategy backtesting</li>
+</ul></li>
+<li>Trading</li>
+<li>Writing How-tos</li>
+</ul>
+</div>
+<div id="opportunities-for-others" class="section level1">
+<h1>Opportunities for Others</h1>
+<p>It would be great to work with others on this project.<br />
+If you would like to help out in any way, just let me know.<br />
+Also, feel free to join the effort at:</p>
+<ul>
+<li><a href="https://github.com/mikebesso/ShinyTrades" class="uri">https://github.com/mikebesso/ShinyTrades</a></li>
+<li><a href="https://github.com/mikebesso/EasyLanguage" class="uri">https://github.com/mikebesso/EasyLanguage</a></li>
 </ul>
 </div>
 
