--- a/index.html
+++ b/index.html
@@ -275,8 +275,17 @@ div.tocify {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>
-  <a href="index.html">Home</a>
+        <li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Plan
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="goals.html">Goals</a>
+    </li>
+  </ul>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
@@ -286,6 +295,9 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Mutual Funds</li>
+    <li>
+      <a href="vanguardfunds.html">Vanguard Funds</a>
+    </li>
     <li>
       <a href="xray.html">X-Ray</a>
     </li>
@@ -335,12 +347,26 @@ div.tocify {
 
 <div id="welcome" class="section level1">
 <h1>Welcome</h1>
-<p>This is the ShinyTrades companion web site. Though, not much here yet.</p>
-<p>The first thing I am going to document is how to use <a href="www.morningstar.com">Morningstar’s</a> <a href="http://portfolio.morningstar.com/RtPort/Free/InstantXRayDEntry.aspx">Instant X-Ray Tool</a> to understand the hidden features of mutual funds:</p>
+<p>Welcome to the companion website to the ShinyTrades web app. This experimental web application is for educational (and if you are cruel, entertainment) purposes only. As such, it is imperative that you do NOT base any investment decisions on what you find here.</p>
+<p>While I hope to be able to eventually provide services and education to others, that is a long way off.</p>
+<p>I have a day job and this project is very much an after hours endeavor.<br />
+Therefore, most published versions will be for educational purposes. As such, what you see has not been validated and is likely buggy.</p>
+</div>
+<div id="first-steps" class="section level1">
+<h1>First Steps</h1>
+<p>To get started, I am documenting a few key things.</p>
+<div id="plan" class="section level2">
+<h2>Plan</h2>
+<p>I have started my “plan” by identifying some <a href="goals.html">goals</a>.</p>
+</div>
+<div id="understanding-mutual-fund-fees-and-diversity" class="section level2">
+<h2>Understanding Mutual Fund Fees and Diversity</h2>
+<p><a href="www.morningstar.com">Morningstar</a> provides a great <a href="http://portfolio.morningstar.com/RtPort/Free/InstantXRayDEntry.aspx">Instant X-Ray Tool</a> to help us understand the what is under the hood of our mutual funds:</p>
 <ul>
 <li><a href="fees401K.html">Hidden Fees</a></li>
 <li><a href="balance401K.html">Balance</a></li>
 </ul>
+</div>
 </div>
 
 
