--- a/vanguardfunds.html
+++ b/vanguardfunds.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Calculating Mutual Fund Fees</title>
+<title>Vanguard Funds</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
@@ -340,40 +340,40 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Calculating Mutual Fund Fees</h1>
+<h1 class="title toc-ignore">Vanguard Funds</h1>
 
 </div>
 
 
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
-<p>Mutual funds are far from transparent with their fees. Fortunately, Morningstar provides tool to help us calculate how much it costs to own specific mutual funds.</p>
+<p>Vanguard makes three types of funds available for my 401K plan. Each type has different characteristics geared for different goals.</p>
 </div>
-<div id="directions" class="section level1">
-<h1>Directions</h1>
-<ul>
-<li><p>Research</p>
-<p>Before you can get started, you will need the list of fund symbols from your brokerage. For educational purposes, you can use <a href="vanguardfunds.html">list of funds</a> available to me.</p></li>
-<li><p>Open the tool</p>
-<p>Open <a href="http://portfolio.morningstar.com/RtPort/Free/InstantXRayDEntry.aspx">Instant X-Ray Tool</a> to calculate the cost of owning one or more mutual funds.</p>
+<div id="types-of-funds" class="section level1">
+<h1>Types of Funds</h1>
+<div id="index-funds" class="section level2">
+<h2>Index Funds</h2>
 <div class="figure">
-<img src="images/morningstar/xray/costoffunds1.png" alt="Enter Holdings" />
-<p class="caption">Enter Holdings</p>
-</div></li>
-<li><p>Enter a Symbol</p>
-<p><em>Instant X-Ray</em> was built to look at a portfolio of funds all at once. If we want to understand the fees of a single fund, we enter one at a time. For example:</p></li>
-<li><p>Enter a Dollar Value</p>
-<p>Since we want to know a dollar value, we must provide a dollar value for our holdings. If you do not own the mutual fund, I suggest entering either $100,000 or $10,000.</p></li>
-<li><p>Click on the <em>Show Instant X-Ray</em> button</p>
-<p>![Instant X-Ray(images/morningstar/xray/costoffunds2.png)</p>
-<p>The important numbers are highlighted in yellow.</p>
+<img src="images/vanguard/indexfunds.png" alt="Index Funds" />
+<p class="caption">Index Funds</p>
+</div>
+</div>
+<div id="managed-funds" class="section level2">
+<h2>Managed Funds</h2>
+<div class="figure">
+<img src="images/vanguard/managedfunds.png" alt="Managed Funds" />
+<p class="caption">Managed Funds</p>
+</div>
+<p>Note that the Zurich Stable Value Fund functions as a money market account. That is, each share has a value of close to $1. There little risk of losing this investment, and close to zero chance of it growing. Nonetheless, having a money option is a good safe haven when needed.</p>
+</div>
+<div id="target-date-funds" class="section level2">
+<h2>Target Date Funds</h2>
+<p>I’ve decided that the target date funds are not for me for the following reasons:</p>
 <ul>
-<li><p><a href="https://en.wikipedia.org/wiki/expense_ratio">Expense Ratio</a></p>
-<p>The lower this number, the better. Ideally, we want a ratio that is under 0.5%. But, under 0.3% is even better.</p></li>
-<li><p>Estimated Mutual Fund Expenses</p>
-<p>This is the dollar value of expenses based on the value you specified.</p></li>
-</ul></li>
+<li>Research that I’ve done seemed to indicate that they often failed at meeting their stated objectives.</li>
+<li>Without symbols, I could not find a way to independently verify their cost or performance.</li>
 </ul>
+</div>
 </div>
 
 
